Added recipients page and reorganized states

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
           <!-- injector:js -->
           <script src="app/pollio/pollio.controller.js"></script>
           <script src="app/pollio/pollio.js"></script>
+          <script src="app/polls/create/add-recipients.controller.js"></script>
           <script src="app/polls/create/create.controller.js"></script>
           <script src="app/polls/create/create.js"></script>
           <script src="app/polls/factories/poll-question-answer-respose/poll-question-answer-respose.factory.js"></script>
@@ -64,6 +65,7 @@
           <script src="app/polls/factories/poll/poll.factory.js"></script>
           <script src="app/polls/polls.controller.js"></script>
           <script src="app/polls/polls.js"></script>
+          <script src="app/polls/services/poll.model/poll.model.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
